--- a/src/app/components/todo-entry/todo-entry.component.html
+++ b/src/app/components/todo-entry/todo-entry.component.html
@@ -1,4 +1,38 @@
-<button mat-button
-        (click)="submit()">Submit</button>
-<button mat-button
-        (click)="cancel()">Cancel</button>
+<form [formGroup]="form"
+      (ngSubmit)="submit()">
+  <div class="field-container">
+    <mat-form-field hintLabel="Max of 200 characters"
+                    style="width: 800px !important"
+                    appearance="fill">
+      <mat-label>Enter your Task</mat-label>
+      <input matInput
+             formControlName="name"
+             placeholder="Take out the trash" />
+    </mat-form-field>
+  </div>
+  <div class="field-container">
+    <mat-form-field class="example-full-width"
+                    appearance="fill">
+      <mat-label>Due Date:</mat-label>
+      <input matInput
+             type="datetime"
+             formControlName="dueDate" />
+    </mat-form-field>
+  </div>
+  <div class="field-container">
+    <mat-form-field appearance="fill">
+      <mat-label>Project</mat-label>
+      <mat-select>
+        <mat-option value=""></mat-option>
+        <mat-option value="Work">Work</mat-option>
+        <mat-option value="Home">Home</mat-option>
+      </mat-select>
+    </mat-form-field>
+  </div>
+  <div>
+    <button mat-button
+            (click)="submit()">Submit</button>
+    <button mat-button
+            (click)="cancel()">Cancel</button>
+  </div>
+</form>
