--- a/src/app/components/inbox/inbox.component.html
+++ b/src/app/components/inbox/inbox.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-  <mat-card-title></mat-card-title>
+  <mat-card-title>Inbox</mat-card-title>
   <mat-card-subtitle>Inbox items have no due date or project assigned.</mat-card-subtitle>
   <mat-card-actions>
     <button mat-button>
