--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -20,7 +20,7 @@
               (click)="drawer.toggle()">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>Wonderful List</span>
+      <span>Omni App</span>
     </mat-toolbar>
     <router-outlet></router-outlet>
   </mat-sidenav-content>
