added logout functionality

--- a/src/app/components/actions/actions.component.html
+++ b/src/app/components/actions/actions.component.html
@@ -4,5 +4,8 @@
     <button mat-button
             (click)="addItem()"
             color="primary">Add New Item</button>
+    <button mat-button
+            (click)="logout()"
+            color="primary">Logout</button>
   </mat-card-actions>
 </mat-card>
