Can now mark todos complete/incomplete

--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -21,7 +21,11 @@
                   (click)="markComplete(item)">
             <mat-icon>radio_button_unchecked</mat-icon>
           </button>
-          <mat-icon *ngIf="item.completed">done</mat-icon>
+          <button mat-button
+                  *ngIf="item.completed"
+                  (click)="markIncomplete(item)">
+            <mat-icon>radio_button_checked</mat-icon>
+          </button>
         </td>
       </tr>
     </tbody>
